[package]
name = "matcherino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1" # uncomment for release/qa building
rand = "0.8.5"
# bevy = { version = "0.12.1", features = ["dynamic_linking"] } # uncomment for fast developing
